--- a/index.html
+++ b/index.html
@@ -112,18 +112,15 @@
     catch(e){ console.warn("Firebase 初始化失敗，改用 JSON 備援：", e); }
 
     // ========= 菜單來源控制 =========
-    // 版本參數：每次改價換一個新值（或改成 Date.now() 自動）
-    const MENU_VER = "2025-08-11-01";
-    const MENU_URL = `menu_items.json?v=${MENU_VER}`;
-    // URL 開關：?source=json 可強制使用 JSON（跳過 Firebase）
-    const sourceOverride = qs.get("source");
+    const MENU_VER = "2025-08-11-01";                 // 每次改價換新版本
+    const MENU_URL = `menu_items.json?v=${MENU_VER}`; // 避免快取
+    const sourceOverride = new URLSearchParams(location.search).get("source"); // ?source=json
 
     // ========= 讀菜單（Firebase 優先，失敗/覆蓋則用 JSON）=========
     async function loadMenu() {
       $("msg").className = "message info";
       $("msg").textContent = "正在載入菜單…";
 
-      // 若未指定 source=json，且 db 存在，嘗試讀 Firebase
       if (db && sourceOverride !== "json") {
         try {
           const snap = await db.ref("menu_items").once("value");
@@ -140,7 +137,6 @@
         } catch(err){ console.warn("讀取 Firebase 失敗：", err); }
       }
 
-      // 讀 JSON 備援
       try {
         const res = await fetch(MENU_URL, { cache: "no-store" });
         if(!res.ok) throw new Error(`HTTP ${res.status}`);
@@ -224,15 +220,23 @@
       }catch{}
     }
 
-    // ========= 計算總價 & 控制送出鈕 =========
-    function updateTotal(){
-      let total = 0, count = 0;
+    // ========= 統一的總價計算（避免從字串解析）=========
+    function calcTotal(){
+      let total = 0;
       Object.keys(state.menu).forEach(id=>{
         const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
-        if (q>0){
-          total += (Number(state.menu[id].price)||0) * q;
-          count += q;
-        }
+        if (q>0) total += (Number(state.menu[id].price)||0) * q;
+      });
+      return total;
+    }
+
+    // ========= 計算總價 & 控制送出鈕 =========
+    function updateTotal(){
+      const total = calcTotal();
+      let count = 0;
+      Object.keys(state.menu).forEach(id=>{
+        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
+        count += q;
       });
       $("total").textContent = `合計金額：$${fmt.format(total)}${count?`（${count} 項）`:""}`;
       $("submitBtn").disabled = (count === 0) || state.submitting;
@@ -260,7 +264,8 @@
         state.submitting = false; updateTotal(); return;
       }
 
-      const total = $("total").textContent.replace(/[^\d]/g,"")*1 || 0;
+      const total = calcTotal(); // ★ 用函式計算，避免從文字抓錯
+
       const order = { table: currentTable, time: new Date().toISOString(), items, total };
 
       const btn = $("submitBtn");
