--- a/index.html
+++ b/index.html
@@ -1,345 +1,93 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>點餐系統</title>
-
-  <!-- Firebase（compat 版） -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
-
+  <meta charset="utf-8" />
+  <title>Zero-01 桌號 QR 碼（01–20）</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <style>
-    :root { color-scheme: light; }
-    * { box-sizing: border-box; }
-    body { font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans TC",Arial;
-           margin:0; background:#f7f7f7; }
-    header { padding:16px; position:sticky; top:0; background:#f7f7f7; z-index:5; }
-    h1 { margin:0; color:#333; font-size:1.4rem; }
-    main { padding:0 16px 96px; }
-    h2 { color:#333; margin:16px 0 8px; font-size:1.1rem; }
-    .item { background:#fff; border:1px solid #e5e5e5; border-radius:12px;
-            padding:12px; margin:8px 0; box-shadow:0 2px 10px rgba(0,0,0,.04); }
-    .row { display:flex; align-items:center; gap:.6rem; flex-wrap:wrap; }
-    .name { font-weight:700; }
-    .price { color:#555; }
-    .qty { width:88px; }
-    .note { flex:1 1 220px; min-width:200px; }
-
-    .checkout-bar {
-      position:fixed; left:0; right:0; bottom:0; background:#fff; border-top:1px solid #e5e5e5;
-      padding:10px 12px; display:flex; align-items:center; gap:12px; z-index:10;
+    :root { --card-w: 360px; --gap: 16px; }
+    body { font-family: system-ui, -apple-system, "Segoe UI", "Noto Sans TC", Arial;
+           margin: 24px; color: #333; }
+    h1 { margin: 0 0 8px; }
+    .meta { color:#666; margin: 0 0 20px; font-size: 14px; }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(var(--card-w), 1fr));
+      gap: var(--gap);
     }
-    .checkout-bar .sum { font-weight:900; font-size:1.1rem; }
-    .checkout-bar .muted { color:#666; font-size:.9rem; }
-    button.primary {
-      margin-left:auto; padding:.75rem 1.2rem; font-size:1rem; font-weight:700;
-      background:#0d6efd; color:#fff; border:0; border-radius:10px; cursor:pointer;
+    .card {
+      border: 1px solid #e5e5e5; border-radius: 12px;
+      padding: 16px; background:#fff; box-shadow: 0 2px 10px rgba(0,0,0,.04);
     }
-    button.primary[disabled] { opacity:.6; cursor:not-allowed; }
-
-    .message { padding:10px 16px; min-height:1.25rem; font-weight:700; }
-    .ok { color:#0a7d39; } .err { color:#b3261e; } .info { color:#0b5ed7; }
-
-    .toast {
-      position:fixed; left:50%; bottom:80px; transform:translateX(-50%);
-      background:rgba(0,0,0,.85); color:#fff; padding:10px 14px; border-radius:10px;
-      font-size:.95rem; opacity:0; pointer-events:none; transition:opacity .25s;
-      z-index:100;
+    .title { font-weight: 700; margin-bottom: 8px; }
+    .url { font-size: 12px; color:#555; word-break: break-all; margin-top: 6px; }
+    .qr { display:flex; align-items:center; justify-content:center; height: 240px; }
+    .tip { font-size:12px; color:#888; margin-top: 8px; }
+    @media print {
+      body { margin: 0; }
+      .grid { gap: 8px; }
+      .card { box-shadow: none; border: 1px solid #bbb; }
     }
-    .toast.show { opacity:1; }
-
-    .success { display:none; padding:24px; text-align:center; }
-    .success h3 { margin:0 0 8px; }
-    .success .code { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-                     background:#f1f3f5; border:1px dashed #cbd5e1; border-radius:8px;
-                     display:inline-block; padding:6px 10px; }
   </style>
 </head>
 <body>
-  <header><h1>📋 手機點餐</h1></header>
+  <h1>Zero-01 桌號 QR 碼（01–20）</h1>
+  <p class="meta">
+    列印建議：A4、直向、邊界正常、彩色或黑白皆可。<br />
+    產生時間：<span id="ts"></span>
+  </p>
 
-  <main>
-    <div id="menu"></div>
-    <div id="msg" class="message info"></div>
-
-    <section id="success" class="success">
-      <h3>✅ 訂單已送出</h3>
-      <p>您的訂單編號：</p>
-      <p class="code" id="orderId">—</p>
-      <p style="margin-top:8px;">請保持頁面或出示此畫面給服務人員。</p>
-      <!-- ▼ 修正：保留目前的 ?table= 參數回到點餐頁 -->
-      <button class="primary" onclick="location.href = location.pathname + location.search">回到點餐</button>
-    </section>
-  </main>
-
-  <div class="checkout-bar" id="checkoutBar">
-    <div class="sum" id="total">合計金額：$0</div>
-    <div class="muted" id="tableInfo"></div>
-    <button class="primary" id="submitBtn" disabled>送出訂單</button>
-  </div>
-
-  <div class="toast" id="toast"></div>
+  <div class="grid" id="grid"></div>
 
   <script>
-    // ========= 基本工具 =========
-    const $ = (id) => document.getElementById(id);
-    const fmt = new Intl.NumberFormat('zh-TW');
-    function showToast(text, ms=1600) {
-      const t = $("toast"); t.textContent = text; t.classList.add("show");
-      setTimeout(()=> t.classList.remove("show"), ms);
-    }
-
-    // ========= 狀態 =========
-    const qs = new URLSearchParams(location.search);
-    const currentTable = qs.get("table") || "01";
-    $("tableInfo").textContent = `桌號：${currentTable}`;
-    const STORAGE_KEY = `cart_${currentTable}`;
-    const state = { source: null, menu: {}, submitting: false };
-
-    // ▼ 新增：有效 session id（通過開桌檢查後取得）
-    let ACTIVE_SESSION_ID = null;
-
-    // ========= Firebase 設定 =========
+    // ===== Firebase Config =====
     const firebaseConfig = {
-      apiKey: "AIzaSyDaC14zf1ZxOsd-twyjzSgTIcNBwty1Is",
-      authDomain: "zero-01-17457.firebaseapp.com",
-      projectId: "zero-01-17457",
-      storageBucket: "zero-01-17457.appspot.com",
-      messagingSenderId: "534119998616",
-      appId: "1:534119998616:web:ec3b6c2d48318f9c51ced",
-      databaseURL: "https://zero-01-17457-default-rtdb.asia-southeast1.firebasedatabase.app"
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID"
     };
+    firebase.initializeApp(firebaseConfig);
 
-    let db = null;
-    try { firebase.initializeApp(firebaseConfig); db = firebase.database(); }
-    catch(e){ console.warn("Firebase 初始化失敗，改用 JSON 備援：", e); }
+    // === 桌號設定 ===
+    const START_TABLE = 1;
+    const END_TABLE   = 20;
+    const BASE_URL    = "https://n126look.github.io/Zero-01/order.html";
 
-    // ========= 菜單來源控制 =========
-    const MENU_VER = "2025-08-11-01";                 // 每次改價換新版本
-    const MENU_URL = `menu_items.json?v=${MENU_VER}`; // 避免快取
-    const sourceOverride = new URLSearchParams(location.search).get("source"); // ?source=json
+    document.getElementById('ts').textContent = new Date().toLocaleString('zh-TW');
 
-    // ========= 開桌 session 檢查（重要） =========
-    async function checkSession() {
-      // JSON 模式或本地測試時可放行（沒有 db）
-      if (!db) return true;
+    const grid = document.getElementById('grid');
 
-      try {
-        const snap = await db.ref(`tables/${currentTable}/session`).once("value");
-        const sess = snap.val();
-        if (!sess || !sess.id || !sess.expiresAt || Number(sess.expiresAt) <= Date.now()) {
-          $("msg").className = "message err";
-          $("msg").textContent = "此桌尚未開桌或已結帳，請洽服務人員。";
-          $("submitBtn").disabled = true;
-          return false;
-        }
-        ACTIVE_SESSION_ID = String(sess.id);
-        return true;
-      } catch (e) {
-        $("msg").className = "message err";
-        $("msg").textContent = "讀取桌況失敗，請稍後重試或洽服務人員。";
-        $("submitBtn").disabled = true;
-        return false;
-      }
-    }
+    for (let t = START_TABLE; t <= END_TABLE; t++) {
+      const tableStr = String(t).padStart(2, '0');
+      const url = `${BASE_URL}?table=${tableStr}`;
 
-    // ========= 讀菜單（Firebase 優先，失敗/覆蓋則用 JSON）=========
-    async function loadMenu() {
-      $("msg").className = "message info";
-      $("msg").textContent = "正在載入菜單…";
+      const card = document.createElement('div');
+      card.className = 'card';
+      card.innerHTML = `
+        <div class="title">桌號 ${tableStr}</div>
+        <div class="qr" id="qr-${tableStr}"></div>
+        <div class="url">${url}</div>
+        <div class="tip">請用相機掃描 QR 立即點餐</div>
+      `;
+      grid.appendChild(card);
 
-      if (db && sourceOverride !== "json") {
-        try {
-          const snap = await db.ref("menu_items").once("value");
-          const data = snap.val();
-          if (data && Object.keys(data).length) {
-            state.source = "firebase";
-            state.menu = data;
-            renderMenu(data);
-            restoreCart();
-            updateTotal();
-            $("msg").textContent = "";
-            return;
-          }
-        } catch(err){ console.warn("讀取 Firebase 失敗：", err); }
-      }
-
-      try {
-        const res = await fetch(MENU_URL, { cache: "no-store" });
-        if(!res.ok) throw new Error(`HTTP ${res.status}`);
-        const data = await res.json();
-        state.source = "json";
-        state.menu = data;
-        renderMenu(data);
-        restoreCart();
-        updateTotal();
-        $("msg").textContent = "（目前為離線/JSON 模式）";
-      } catch(err){
-        $("msg").className = "message err";
-        $("msg").textContent = `⚠️ 無法取得菜單：${err.message}`;
-      }
-    }
-
-    // ========= 渲染菜單 =========
-    function renderMenu(raw){
-      const menu = $("menu");
-      menu.innerHTML = "";
-      const grouped = {};
-      Object.entries(raw).forEach(([id, item])=>{
-        (grouped[item.category || "其他"] ||= []).push({ ...item, id });
-      });
-
-      Object.entries(grouped).forEach(([cat, items])=>{
-        const h = document.createElement("h2"); h.textContent = cat; menu.appendChild(h);
-        items.forEach(item=>{
-          const card = document.createElement("div");
-          card.className = "item";
-          card.innerHTML = `
-            <div class="row">
-              <span class="name">${item.name}</span>
-              <span class="price">＄${fmt.format(Number(item.price)||0)}</span>
-              <label>數量：
-                <input class="qty" type="number" inputmode="numeric" pattern="[0-9]*"
-                       min="0" value="0" id="qty-${item.id}">
-              </label>
-              ${item.enable_note ? `
-                <input class="note" type="text" id="note-${item.id}" placeholder="備註（可留空）">` : ""}
-            </div>
-          `;
-          menu.appendChild(card);
-
-          const qtyEl = card.querySelector(`#qty-${item.id}`);
-          qtyEl.addEventListener("input", ()=>{ clampQty(qtyEl); updateTotal(); saveCart(); });
-          const noteEl = card.querySelector(`#note-${item.id}`);
-          if (noteEl) noteEl.addEventListener("change", saveCart);
-        });
+      new QRCode(document.getElementById(`qr-${tableStr}`), {
+        text: url,
+        width: 220,
+        height: 220,
+        correctLevel: QRCode.CorrectLevel.H
       });
     }
-
-    function clampQty(el){
-      const v = parseInt(el.value || "0", 10);
-      if (isNaN(v) || v < 0) el.value = 0;
-    }
-
-    // ========= 暫存（依桌號分開）=========
-    function saveCart(){
-      const data = {};
-      Object.keys(state.menu).forEach(id=>{
-        const qEl = $(`qty-${id}`);
-        const nEl = $(`note-${id}`);
-        if (!qEl) return;
-        const qty = parseInt(qEl.value||"0",10)||0;
-        const note = nEl ? (nEl.value||"") : "";
-        if (qty>0 || note) data[id] = { qty, note };
-      });
-      localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
-    }
-
-    function restoreCart(){
-      try{
-        const raw = localStorage.getItem(STORAGE_KEY);
-        if(!raw) return;
-        const cart = JSON.parse(raw);
-        Object.entries(cart).forEach(([id, {qty, note}])=>{
-          const qEl = $(`qty-${id}`); if (qEl) qEl.value = qty;
-          const nEl = $(`note-${id}`); if (nEl && note) nEl.value = note;
-        });
-      }catch{}
-    }
-
-    // ========= 統一的總價計算 =========
-    function calcTotal(){
-      let total = 0;
-      Object.keys(state.menu).forEach(id=>{
-        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
-        if (q>0) total += (Number(state.menu[id].price)||0) * q;
-      });
-      return total;
-    }
-
-    // ========= 計算總價 & 控制送出鈕 =========
-    function updateTotal(){
-      const total = calcTotal();
-      let count = 0;
-      Object.keys(state.menu).forEach(id=>{
-        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
-        count += q;
-      });
-      $("total").textContent = `合計金額：$${fmt.format(total)}${count?`（${count} 項）`:""}`;
-      $("submitBtn").disabled = (count === 0) || state.submitting;
-    }
-
-    // ========= 送出訂單 =========
-    $("submitBtn").addEventListener("click", async ()=>{
-      if (state.submitting) return;
-      state.submitting = true; updateTotal();
-
-      const items = [];
-      Object.keys(state.menu).forEach(id=>{
-        const q = parseInt(($(`qty-${id}`)?.value)||"0",10) || 0;
-        if (q>0){
-          const note = $(`note-${id}`)?.value?.trim() || "";
-          items.push({
-            id, name: state.menu[id].name,
-            price: Number(state.menu[id].price)||0, quantity: q, note
-          });
-        }
-      });
-
-      if (items.length === 0){
-        showToast("請先選擇餐點");
-        state.submitting = false; updateTotal(); return;
-      }
-
-      const total = calcTotal();
-
-      // ▼ 加入 sessionId，供 Rules 驗證
-      const order = {
-        table: currentTable,
-        sessionId: ACTIVE_SESSION_ID || null, // JSON 模式時可能為 null
-        time: new Date().toISOString(),
-        items,
-        total
-      };
-
-      const btn = $("submitBtn");
-      const oldText = btn.textContent;
-      btn.textContent = "送出中…";
-      btn.disabled = true;
-
-      if (state.source === "firebase" && db){
-        try{
-          const ref = await db.ref("orders").push(order);
-          localStorage.removeItem(STORAGE_KEY);
-          $("msg").className = "message ok";
-          $("msg").textContent = "";
-          $("success").style.display = "block";
-          $("orderId").textContent = ref.key || "(未知編號)";
-          $("checkoutBar").style.display = "none";
-          $("menu").style.display = "none";
-          showToast("訂單已送出");
-        }catch(err){
-          $("msg").className = "message err";
-          $("msg").textContent = `⚠️ 訂單送出失敗：${err.message}`;
-          showToast("送出失敗，請重試");
-          state.submitting = false; btn.textContent = oldText; updateTotal();
-        }
-      } else {
-        console.log("（JSON 模式）僅前端記錄：", order);
-        $("msg").className = "message ok";
-        $("msg").textContent = "✅ 已記錄您的選擇（目前為離線/JSON 模式）";
-        showToast("已記錄您的選擇");
-        state.submitting = false; btn.textContent = oldText; updateTotal();
-      }
-    });
-
-    // ========= 啟動：先檢查開桌，再載菜單 =========
-    (async () => {
-      const ok = await checkSession();   // ★ 先做桌況驗證
-      if (ok) loadMenu();
-    })();
   </script>
 </body>
 </html>
+
 
