--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8" />
   <title>Zero-01 桌號 QR 碼（01–20）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- QRCode.js -->
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <!-- JSZip & FileSaver -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   <style>
     :root { --card-w: 360px; --gap: 16px; }
     body { font-family: system-ui, -apple-system, "Segoe UI", "Noto Sans TC", Arial;
@@ -22,15 +23,24 @@
     .card {
       border: 1px solid #e5e5e5; border-radius: 12px;
       padding: 16px; background:#fff; box-shadow: 0 2px 10px rgba(0,0,0,.04);
+      display:flex; flex-direction:column; gap:10px;
     }
-    .title { font-weight: 700; margin-bottom: 8px; }
-    .url { font-size: 12px; color:#555; word-break: break-all; margin-top: 6px; }
+    .title { font-weight: 800; }
     .qr { display:flex; align-items:center; justify-content:center; height: 240px; }
-    .tip { font-size:12px; color:#888; margin-top: 8px; }
+    .url { font-size: 12px; color:#555; word-break: break-all; }
+    .actions { display:flex; gap:8px; flex-wrap: wrap; }
+    .btn {
+      font-size:12px; border:1px solid #e5e5e5; background:#f8f9fa; color:#333;
+      border-radius:8px; padding:6px 10px; cursor:pointer;
+    }
+    .btn:hover { background:#eef1f4; }
+    .tip { font-size:12px; color:#888; }
     @media print {
       body { margin: 0; }
       .grid { gap: 8px; }
       .card { box-shadow: none; border: 1px solid #bbb; }
+      .actions { display:none; }
+      a { color: #000; text-decoration: none; }
     }
   </style>
 </head>
@@ -41,53 +51,119 @@
     產生時間：<span id="ts"></span>
   </p>
 
+  <!-- 新增下載全部按鈕 -->
+  <div style="margin-bottom: 16px;">
+    <button class="btn" id="regen">重新產生 QR</button>
+    <button class="btn" id="download-all">下載全部 ZIP</button>
+  </div>
+
   <div class="grid" id="grid"></div>
 
   <script>
-    // ===== Firebase Config =====
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
-    firebase.initializeApp(firebaseConfig);
-
-    // === 桌號設定 ===
     const START_TABLE = 1;
     const END_TABLE   = 20;
-    const BASE_URL    = "https://n126look.github.io/Zero-01/order.html";
+    const BASE_URL = "https://n126look.github.io/Zero-01/";
+    const EXTRA_PARAMS = {};
 
-    document.getElementById('ts').textContent = new Date().toLocaleString('zh-TW');
+    document.getElementById('ts').textContent =
+      new Date().toLocaleString('zh-TW', { hour12:false });
 
     const grid = document.getElementById('grid');
 
-    for (let t = START_TABLE; t <= END_TABLE; t++) {
-      const tableStr = String(t).padStart(2, '0');
-      const url = `${BASE_URL}?table=${tableStr}`;
+    function normalizeBase(url) {
+      if (/index\.html?$/.test(url)) return url;
+      return url.endsWith('/') ? url : (url + '/');
+    }
 
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.innerHTML = `
-        <div class="title">桌號 ${tableStr}</div>
-        <div class="qr" id="qr-${tableStr}"></div>
-        <div class="url">${url}</div>
-        <div class="tip">請用相機掃描 QR 立即點餐</div>
-      `;
-      grid.appendChild(card);
+    function buildUrl(tableStr) {
+      const base = normalizeBase(BASE_URL);
+      const u = new URL(base, location.origin);
+      u.searchParams.set('table', tableStr);
+      for (const [k, v] of Object.entries(EXTRA_PARAMS)) {
+        u.searchParams.set(k, v);
+      }
+      return u.toString();
+    }
 
-      new QRCode(document.getElementById(`qr-${tableStr}`), {
-        text: url,
-        width: 220,
-        height: 220,
-        correctLevel: QRCode.CorrectLevel.H
+    function downloadCanvasAsPng(canvas, filename){
+      const link = document.createElement('a');
+      link.download = filename;
+      link.href = canvas.toDataURL('image/png');
+      link.click();
+    }
+
+    function generateQRs() {
+      grid.innerHTML = "";
+      for (let t = START_TABLE; t <= END_TABLE; t++) {
+        const tableStr = String(t).padStart(2, '0');
+        const url = buildUrl(tableStr);
+
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.innerHTML = `
+          <div class="title">桌號 ${tableStr}</div>
+          <div class="qr" id="qr-${tableStr}"></div>
+          <div class="url"><a href="${url}" target="_blank" rel="noopener">${url}</a></div>
+          <div class="actions">
+            <button class="btn" data-dl="${tableStr}">下載 PNG</button>
+            <a class="btn" href="${url}" target="_blank" rel="noopener">開啟測試</a>
+          </div>
+          <div class="tip">請用相機掃描 QR 即可開始點餐</div>
+        `;
+        grid.appendChild(card);
+
+        const qrWrap = document.getElementById(`qr-${tableStr}`);
+        const qr = new QRCode(qrWrap, {
+          text: url,
+          width: 220,
+          height: 220,
+          correctLevel: QRCode.CorrectLevel.H
+        });
+
+        card.querySelector(`[data-dl="${tableStr}"]`).addEventListener('click', () => {
+          const cvs = qrWrap.querySelector('canvas');
+          const img = qrWrap.querySelector('img');
+          if (cvs) {
+            downloadCanvasAsPng(cvs, `table_${tableStr}.png`);
+          } else if (img) {
+            const canvas = document.createElement('canvas');
+            canvas.width = img.naturalWidth;
+            canvas.height = img.naturalHeight;
+            const ctx = canvas.getContext('2d');
+            ctx.drawImage(img, 0, 0);
+            downloadCanvasAsPng(canvas, `table_${tableStr}.png`);
+          }
+        });
+      }
+    }
+
+    async function downloadAllAsZip() {
+      const zip = new JSZip();
+      for (let t = START_TABLE; t <= END_TABLE; t++) {
+        const tableStr = String(t).padStart(2, '0');
+        const url = buildUrl(tableStr);
+        const canvas = document.createElement('canvas');
+        const qrTemp = new QRCode(canvas, {
+          text: url,
+          width: 220,
+          height: 220,
+          correctLevel: QRCode.CorrectLevel.H
+        });
+        await new Promise(r => setTimeout(r, 50)); // 等 QR 繪製
+        const dataUrl = canvas.querySelector('canvas').toDataURL('image/png');
+        const imgData = dataUrl.split(',')[1];
+        zip.file(`table_${tableStr}.png`, imgData, { base64: true });
+        canvas.innerHTML = "";
+      }
+      zip.generateAsync({ type: "blob" }).then(content => {
+        saveAs(content, "all_tables.zip");
       });
     }
+
+    document.getElementById('regen').addEventListener('click', generateQRs);
+    document.getElementById('download-all').addEventListener('click', downloadAllAsZip);
+
+    generateQRs();
   </script>
 </body>
 </html>
-
-
