--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>後台管理｜即時訂單 + 開桌控台</title>
+  <title>後台管理｜即時訂單 + 開桌面板</title>
 
   <!-- Firebase compat 版 -->
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
@@ -18,28 +18,27 @@
     select, button, input { font:inherit; }
     main { padding:16px; display:grid; grid-template-columns: 360px 1fr; gap:16px; align-items:start; }
 
-    /* 開桌控台 */
-    .panel { background:#fff; border:1px solid #e9ecef; border-radius:12px; padding:12px; box-shadow:0 2px 10px rgba(0,0,0,.03); }
-    .panel h2 { margin:0 0 8px; font-size:1rem; }
-    .row { display:flex; gap:8px; align-items:center; flex-wrap:wrap; margin:6px 0; }
-    .row input[type="text"] { width:72px; padding:8px; border:1px solid #d0d7de; border-radius:8px; }
-    .row input[type="number"] { width:120px; padding:8px; border:1px solid #d0d7de; border-radius:8px; }
-    .panel button { padding:8px 12px; border-radius:10px; border:1px solid #d0d7de; background:#fff; cursor:pointer; }
-    .panel button.primary { background:#0d6efd; color:#fff; border-color:#0d6efd; }
-    .panel button.danger  { border-color:#e11d48; color:#e11d48; }
-    .muted { color:#6c757d; }
-    .ok { color:#0a7d39; }
-    .err { color:#b3261e; }
-    .grid { display:grid; grid-template-columns: repeat(2, 1fr); gap:8px; max-height:50vh; overflow:auto; margin-top:8px; }
-    .card { border:1px solid #e9ecef; border-radius:10px; padding:10px; background:#fafbfc; }
-    .card .title { font-weight:700; }
-    .badge { padding:2px 8px; border-radius:999px; font-size:.8rem; border:1px solid #e3e7ee; }
-    .badge.open { background:#e7f1ff; color:#0b5ed7; }
-    .badge.closed { background:#eef0f2; color:#334155; }
+    /* 桌位按鈕面板 */
+    .table-panel { background:#fff; border:1px solid #e9ecef; border-radius:12px; padding:12px; box-shadow:0 2px 10px rgba(0,0,0,.03); }
+    .table-toolbar { display:flex; gap:10px; align-items:center; margin-bottom:10px; flex-wrap:wrap; }
+    .table-grid { display:grid; grid-template-columns: repeat(5, minmax(90px,1fr)); gap:10px; }
+    .table-btn {
+      cursor:pointer; user-select:none; border-radius:12px; padding:10px 8px;
+      border:1px solid #e5e7eb; background:#fff; text-align:center;
+      display:flex; flex-direction:column; gap:4px;
+    }
+    .table-btn .num { font-weight:800; font-size:18px; letter-spacing:1px; }
+    .table-btn .meta { font-size:12px; color:#6b7280; min-height:1em; }
+    .table-btn.open  { background:#ecfdf5; border-color:#34d399; color:#065f46; }
+    .table-btn.close { background:#fef2f2; border-color:#f87171; color:#7f1d1d; }
 
     /* 訂單清單 */
     .toolbar { margin-left:auto; display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
     .tag { padding:2px 8px; border-radius:999px; font-size:.85rem; border:1px solid #e1e5ea; background:#fff; }
+    .muted { color:#6c757d; }
+    .ok { color:#0a7d39; }
+    .err { color:#b3261e; }
+
     .order { background:#fff; border:1px solid #e9ecef; border-radius:12px; padding:12px; margin:12px 0; box-shadow:0 2px 10px rgba(0,0,0,.03); }
     .order-head { display:flex; align-items:center; gap:10px; flex-wrap:wrap; }
     .order-code { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; padding:2px 6px; border:1px solid #e9ecef; border-radius:6px; background:#f8f9fa; }
@@ -83,26 +82,17 @@
   </header>
 
   <main>
-    <!-- 左側：開桌控台 -->
-    <section class="panel">
-      <h2>🔓 開桌控台</h2>
-      <div class="row">
-        <label>桌號：
-          <input id="tb" type="text" placeholder="01" maxlength="2">
+    <!-- 左側：桌位按鈕面板（10 桌） -->
+    <section class="table-panel">
+      <div class="table-toolbar">
+        <strong>桌位面板</strong>
+        <label>開桌時長（分鐘）
+          <input id="openMinutes" type="number" min="15" step="15" value="180" style="width:80px;">
         </label>
-        <label>時長（分鐘）：
-          <input id="mins" type="number" min="5" step="5" value="180">
-        </label>
+        <span class="muted">點按按鈕即可開/關；綠=開桌，紅=關桌。</span>
+        <span id="sessMsg" class="muted"></span>
       </div>
-      <div class="row">
-        <button class="primary" id="btnOpen">開桌 / 續桌</button>
-        <button id="btnExtend">延長 30 分</button>
-        <button class="danger" id="btnClose">關桌</button>
-      </div>
-      <div id="sessMsg" class="muted" style="margin-top:6px;"></div>
-
-      <h2 style="margin-top:14px;">📋 桌況總覽</h2>
-      <div id="tablesGrid" class="grid"></div>
+      <div id="tableGrid" class="table-grid"></div>
     </section>
 
     <!-- 右側：即時訂單 -->
@@ -113,7 +103,7 @@
   </main>
 
   <script>
-    // ===== Firebase =====
+    // ===== Firebase 設定 =====
     const firebaseConfig = {
       apiKey: "AIzaSyDaC14zf1ZxOsd-twyjzSgTIcNBwty1Is",
       authDomain: "zero-01-17457.firebaseapp.com",
@@ -133,115 +123,101 @@
     const fmt = new Intl.NumberFormat("zh-TW");
     const statusFlow = ["new","preparing","served","paid"];
 
-    // ====== 開桌控台 ======
-    let tablesCache = {}; // { "01": { session: {id, openedAt, expiresAt}, ... } }
+    // ===== 桌位按鈕面板（10 桌） =====
+    const NUM_TABLES = 10;                         // ← 想要幾桌改這裡
+    const DEFAULT_MINUTES = 180;
+    const tableGrid = $("tableGrid");
+    const openMinutesEl = $("openMinutes");
+    let tablesCache = {};
+    let tickTimer = null;
 
-    function pad2(s){ return String(s).padStart(2, "0"); }
-    function normTable(str){
-      const t = String(str||"").trim();
-      if (!/^\d{1,2}$/.test(t)) return null;
-      const n = Number(t);
-      if (n < 1 || n > 99) return null;
-      return pad2(n);
-    }
     function genSessionId(){
       return Math.random().toString(36).slice(2,10) + Date.now().toString(36).slice(-4);
     }
+    function fmtLeft(ms){
+      const s = Math.max(0, Math.floor(ms/1000));
+      const m = Math.floor(s/60), sec = s%60;
+      const h = Math.floor(m/60), min = m%60;
+      if (h>0) return `${h}時${min}分`;
+      if (m>0) return `${m}分${sec}秒`;
+      return `${sec}秒`;
+    }
 
-    async function openTable(){
-      const t = normTable($("tb").value);
-      if (!t){ $("sessMsg").textContent = "請輸入 01~99 的桌號"; $("sessMsg").className = "err"; return; }
-      const mins = Math.max(5, Number($("mins").value||0));
+    function renderButtons(){
       const now = Date.now();
-      const expiresAt = now + mins*60*1000;
+      tableGrid.innerHTML = '';
+      for (let i=1; i<=NUM_TABLES; i++){
+        const t = String(i).padStart(2, '0');
+        const sess = tablesCache?.[t]?.session;
+        const alive = !!(sess && Number(sess.expiresAt) > now);
 
-      const sid = genSessionId();
-      const session = { id: sid, openedAt: now, expiresAt };
+        const btn = document.createElement('button');
+        btn.className = 'table-btn ' + (alive ? 'open' : 'close');
+        btn.dataset.table = t;
+        btn.innerHTML = `
+          <div class="num">桌 ${t}</div>
+          <div class="meta" id="left-${t}">${alive ? fmtLeft(sess.expiresAt - now) : '未開桌'}</div>
+        `;
+        btn.onclick = () => toggleTable(t);
+        tableGrid.appendChild(btn);
+      }
+      if (tickTimer) clearInterval(tickTimer);
+      tickTimer = setInterval(updateCountdowns, 1000);
+    }
+
+    function updateCountdowns(){
+      const now = Date.now();
+      for (let i=1; i<=NUM_TABLES; i++){
+        const t = String(i).padStart(2,'0');
+        const lab = document.getElementById(`left-${t}`);
+        if (!lab) continue;
+        const sess = tablesCache?.[t]?.session;
+        const alive = !!(sess && Number(sess.expiresAt) > now);
+        const btn = lab.closest('.table-btn');
+        if (!alive){
+          lab.textContent = '未開桌';
+          btn?.classList.remove('open'); btn?.classList.add('close');
+        }else{
+          lab.textContent = fmtLeft(Number(sess.expiresAt) - now);
+          btn?.classList.remove('close'); btn?.classList.add('open');
+        }
+      }
+    }
+
+    async function toggleTable(tableNo){
+      const minutes = Number(openMinutesEl?.value || DEFAULT_MINUTES) || DEFAULT_MINUTES;
+      const ref = db.ref(`tables/${tableNo}/session`);
+      const snap = await ref.get();
+      const alive = snap.exists() && Number(snap.val().expiresAt) > Date.now();
 
       try{
-        await tablesRef.child(t).child("session").set(session);
-        $("sessMsg").textContent = `桌號 ${t} 已開桌 / 續桌，Session: ${sid}，將於 ${new Date(expiresAt).toLocaleString()} 到期。`;
-        $("sessMsg").className = "ok";
+        if (alive){
+          // 關桌
+          await ref.remove();
+          $("sessMsg").textContent = `桌 ${tableNo} 已關桌`;
+          $("sessMsg").className = "ok";
+        }else{
+          // 開桌
+          const id = genSessionId();
+          const now = Date.now();
+          const expiresAt = now + minutes*60*1000;
+          await ref.set({ id, openedAt: now, expiresAt });
+          $("sessMsg").textContent = `桌 ${tableNo} 已開桌（${minutes} 分），到期 ${new Date(expiresAt).toLocaleString()}`;
+          $("sessMsg").className = "ok";
+        }
       }catch(e){
-        $("sessMsg").textContent = "開桌失敗：" + e.message;
+        $("sessMsg").textContent = `操作失敗：${e.message}`;
         $("sessMsg").className = "err";
       }
     }
 
-    async function extendTable(){
-      const t = normTable($("tb").value);
-      if (!t){ $("sessMsg").textContent = "請先輸入桌號"; $("sessMsg").className = "err"; return; }
-      try{
-        const snap = await tablesRef.child(t).child("session").get();
-        const s = snap.val();
-        if (!s || !s.expiresAt){ $("sessMsg").textContent = "此桌尚未開桌"; $("sessMsg").className = "err"; return; }
-        const newExp = Math.max(Date.now(), Number(s.expiresAt)) + 30*60*1000;
-        await tablesRef.child(t).child("session").child("expiresAt").set(newExp);
-        $("sessMsg").textContent = `桌號 ${t} 已延長至 ${new Date(newExp).toLocaleString()}`;
-        $("sessMsg").className = "ok";
-      }catch(e){
-        $("sessMsg").textContent = "延長失敗：" + e.message;
-        $("sessMsg").className = "err";
-      }
-    }
-
-    async function closeTable(){
-      const t = normTable($("tb").value);
-      if (!t){ $("sessMsg").textContent = "請先輸入桌號"; $("sessMsg").className = "err"; return; }
-      try{
-        await tablesRef.child(t).child("session").remove();
-        $("sessMsg").textContent = `桌號 ${t} 已關桌`;
-        $("sessMsg").className = "ok";
-      }catch(e){
-        $("sessMsg").textContent = "關桌失敗：" + e.message;
-        $("sessMsg").className = "err";
-      }
-    }
-
-    $("btnOpen").onclick = openTable;
-    $("btnExtend").onclick = extendTable;
-    $("btnClose").onclick = closeTable;
-
-    // 桌況即時監聽 + UI
-    tablesRef.on("value", snap=>{
+    // 即時監聽 /tables
+    tablesRef.on('value', snap => {
       tablesCache = snap.val() || {};
-      renderTables();
+      renderButtons();
     });
 
-    function renderTables(){
-      const wrap = $("tablesGrid");
-      wrap.innerHTML = "";
-      const keys = Object.keys(tablesCache).sort();
-      if (!keys.length){
-        wrap.innerHTML = `<div class="muted">尚無資料，開桌後會出現。</div>`;
-        return;
-      }
-      const now = Date.now();
-      keys.forEach(k=>{
-        const sess = tablesCache[k]?.session;
-        const open = !!(sess && sess.expiresAt > now);
-        const left = open ? Math.max(0, sess.expiresAt - now) : 0;
-        const mins = Math.floor(left/60000), secs = Math.floor((left%60000)/1000);
-        const div = document.createElement("div");
-        div.className = "card";
-        div.innerHTML = `
-          <div class="title">桌號 ${k}　<span class="badge ${open?'open':'closed'}">${open?'開桌中':'已關桌 / 過期'}</span></div>
-          ${
-            sess ? `
-            <div class="muted" style="margin-top:4px;">
-              id: <code>${sess.id}</code><br>
-              到期：${new Date(sess.expiresAt).toLocaleString()}<br>
-              ${open ? `倒數：${mins}分 ${secs}秒` : ""}
-            </div>` : `<div class="muted" style="margin-top:4px;">（無 session）</div>`
-          }
-        `;
-        wrap.appendChild(div);
-      });
-    }
-    // 每秒更新倒數
-    setInterval(renderTables, 1000);
-
-    // ====== 訂單監聽與渲染（你原本的功能保留） ======
+    // ===== 訂單監聽與渲染（沿用你原本的） =====
     let allOrders = {};
     let currentFilter = "all";
     $("filter").addEventListener("change", ()=>{
